[package]
name = "nix-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
nix = { version = "0.29.0", features = ["fs"] }

[[bin]]
name = "ntrun"
path = "src/ntrun/main.rs"
